--- a/client/src/app/pages/users/users.component.html
+++ b/client/src/app/pages/users/users.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="users$ | async as users">
   <div class="col-sm-6">
     <div class="list-group mb-2">
       <button class="btn btn-outline-primary">
@@ -6,12 +6,14 @@
         Add User
       </button>
     </div>
+
     <div class="list-group">
       <a 
+        *ngFor="let user of users"
         class="list-group-item list-group-item-action"
-        [routerLink]="[1]"
+        [routerLink]="[user.id]"
       >
-        Sample
+        {{ user.name }}
       </a>
     </div>
   </div>
