--- a/client/src/libs/auth/src/register/register.component.html
+++ b/client/src/libs/auth/src/register/register.component.html
@@ -2,16 +2,18 @@
     <div
         class="alert"
         [ngClass]="{'alert-danger': 
-        formData.get('email')?.touched && 
-        formData.get('email')?.invalid || 
-        formData.get('password')?.touched && 
-        formData.get('password')?.invalid || 
-        formData.get('agreement')?.touched && 
-        formData.get('agreement')?.invalid}"
+            formData.get('email')?.touched && 
+            formData.get('email')?.invalid || 
+            formData.get('password')?.touched && 
+            formData.get('password')?.invalid || 
+            formData.get('username')?.touched && 
+            formData.get('username')?.invalid || 
+            formData.get('agreement')?.touched && 
+            formData.get('agreement')?.invalid}"
     >
         <form
             [formGroup]="formData"
-            (ngSubmit)="onLocalLoginSubmit()"
+            (ngSubmit)="onLocalRegisterSubmit()"
         >
             <div class="form-group">
                 <label>Email address</label>
@@ -19,7 +21,7 @@
                     type="email"
                     class="form-control"
                     formControlName="email"
-                    placeholder="Enter email"
+                    placeholder="Ваш Email"
                 >
                 <small
                     class="form-text text-muted"
@@ -34,13 +36,36 @@
                     Укажи мэйл корректно, сука
                 </small>
             </div>
+
             <div class="form-group">
-                <label>Password</label>
+                <label>Имя пользователя</label>
+                <input
+                    type="text"
+                    class="form-control"
+                    formControlName="username"
+                    placeholder="Имя пользователя"
+                >
+                <small
+                    class="form-text text-muted"
+                    *ngIf="formData.get('username')?.touched && formData.get('username')?.errors?.['required']"
+                >
+                    Укажи имя пользователя, сука
+                </small>
+                <small
+                    class="form-text text-muted"
+                    *ngIf="formData.get('username')?.touched && formData.get('username')?.errors?.['username']"
+                >
+                    Укажи имя пользователя корректно, сука
+                </small>
+            </div>
+
+            <div class="form-group">
+                <label>Пароль</label>
                 <input
                     type="password"
                     class="form-control"
                     formControlName="password"
-                    placeholder="Password"
+                    placeholder="Пароль"
                 >
             </div>
             <small
@@ -62,13 +87,13 @@
                     class="form-check-input"
                     formControlName="agreement"
                 >
-                <label class="form-check-label">Go fuck urself</label>
+                <label class="form-check-label">Согласие идти на хуй</label>
             </div>
             <small
                 class="form-text text-muted"
                 *ngIf="!formData.get('agreement')?.touched && formData.get('agreement')?.errors?.['required']"
             >
-                Согласие идти на хуй
+                Нужно согласиться, брата(несса)н
             </small>
             <hr>
             <button
@@ -76,7 +101,7 @@
                 class="btn btn-primary"
                 [disabled]="formData.invalid"
             >
-                Submit
+                Зарегистрироваться
             </button>
         </form>
     </div>
