--- a/client/src/libs/auth/src/register/register.component.html
+++ b/client/src/libs/auth/src/register/register.component.html
@@ -103,6 +103,16 @@
             >
                 Зарегистрироваться
             </button>
+            <span>
+                <label for="login">Уже есть аккаунт?</label>
+                <button
+                    id="login"
+                    class="btn btn-primary"
+                    [routerLink]="['/auth', 'login']"
+                >
+                    Войти
+                </button>
+            </span>
         </form>
     </div>
 </div>
