--- a/client/src/libs/admin/users/src/users.component.html
+++ b/client/src/libs/admin/users/src/users.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="list-group">
-            <a *ngFor="let user of users" class="list-group-item list-group-item-action" [routerLink]="['/users', user.id.toString()]">
+            <a *ngFor="let user of users" class="list-group-item list-group-item-action" [routerLink]="['/users', user.id?.toString()]">
                 {{ user.name }}
             </a>
         </div>
