--- a/client/src/libs/posts/src/post-details/post-details.component.html
+++ b/client/src/libs/posts/src/post-details/post-details.component.html
@@ -1,5 +1,9 @@
 <div>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="background-image: url(https://random.imagecdn.app/1500/600);">
+    <div>
+        <button [routerLink]="['/posts']" class="btn btn-primary">К списку постов</button>
+    </div>
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
+        style="background-image: url(https://random.imagecdn.app/1500/600);">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
             <h1 class="display-4 font-weight-normal">{{post.title}}</h1>
             <p class="lead font-weight-normal">{{post.author}}</p>
@@ -11,8 +15,7 @@
 
     <div *ngFor="let abstract of post.abstracts; let abstractIndex = index;">
         <div *ngIf="abstractIndex % 2 === 0" class="row bg-dark text-white overflow-hidden mx-auto ">
-                <!-- <h2 class="display-5">Another headline</h2> -->
-                <p class="lead">{{abstract.text}}</p>
+            <p class="lead">{{abstract.text}}</p>
 
         </div>
         <div *ngIf="abstractIndex % 2 !== 0" class="row bg-light text-center overflow-hidden mx-auto ">
