fixed login, refact. nav

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="container">
-    <app-nav></app-nav>
-    <router-outlet></router-outlet>
-    <!--Add footer-->
-</div>
+<body>
+    <div class="container">
+        <app-nav></app-nav>
+        <router-outlet></router-outlet>
+        <!--Add footer-->
+    </div>
+</body>
