--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,9 @@
-<body>
-    <div class="container">
-        <app-nav></app-nav>
-        <router-outlet></router-outlet>
-        <!--Add footer-->
-    </div>
-</body>
+<header>
+    <app-nav></app-nav>
+</header>
+<main class="container">
+    <router-outlet></router-outlet>
+</main>
+<footer class="footer fixed-bottom">
+    <app-footer></app-footer>
+</footer>
